# bladestats

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.claude/: launch.json
assets/fonts/: README.md
assets/icon/: README.md  make-icon.py
crates/bs-config/: Cargo.toml  bladestats.rc  build.rs
crates/bs-config/src/: anim.rs  app.rs  counter.rs  lhm.rs  lib.rs  log.rs  main.rs  monitor.rs  theme.rs  tray.rs
crates/bs-core/: Cargo.toml
crates/bs-core/src/: config.rs  frames.rs  gamewatch.rs  hotkey.rs  hub.rs  lib.rs  snapshot.rs  theme.rs
crates/bs-render/: Cargo.toml
crates/bs-render/examples/: preview.rs
crates/bs-render/src/: atlas.rs  draw.rs  hud.rs  lib.rs
crates/bs-render/src/hud/: anim.rs  mod.rs  model.rs  paint.rs  state.rs  text.rs
crates/bs-telemetry/: Cargo.toml
crates/bs-telemetry/src/: lib.rs
crates/bs-telemetry/src/windows/: adl.rs  adl_sys.rs  cpu.rs  cputemp.rs  gpu.rs  memory.rs  mod.rs  nvml.rs  pdh.rs  registry.rs
crates/bs-telemetry/src/windows/cputemp/: lhm.rs
crates/bs-windows/: Cargo.toml  bladestats.manifest  build.rs
crates/bs-windows/src/: etw.rs  hotkeys.rs  lib.rs  main.rs  overlay.rs  renderer.rs  selfstat.rs  target.rs  window.rs
design/: configurator.html
docs/: README.md
