[package]
name = "bs-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "bladestats: the overlay and the window that configures it, in one program"

[lib]
name = "bs_config"
path = "src/lib.rs"

# The whole of bladestats. Launching it starts the counter and opens the settings window
# together; there is nothing else to run.
[[bin]]
name = "bladestats"
path = "src/main.rs"
# No test harness for the binary: its manifest requires elevation and cargo cannot launch an
# elevated process. All tests live in the library target.
test = false

[build-dependencies]

[dependencies]
bs-core.workspace = true
bs-render.workspace = true
bs-telemetry.workspace = true
bs-windows.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Native rather than a webview: a webview runtime is not guaranteed to be installed, and
# "portable, no installer" has to stay true.
eframe = { version = "0.35", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.35"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
