[package]
name = "bs-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-independent core of bladestats: metrics, frame timing, config, theme"

[dependencies]
arc-swap.workspace = true
serde.workspace = true
