[package]
name = "bs-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Глиф-атлас и раскладка оверлея, общие для Windows и Linux"

[dependencies]
bs-core.workspace = true
ab_glyph.workspace = true

[dev-dependencies]
# Только для примера preview: он софтверно растеризует список отрисовки в PNG, чтобы
# раскладку можно было проверить глазами, не поднимая D3D11 или Vulkan.
png = "0.18"

[features]
# Вшивает JetBrains Mono прямо в бинарник, чтобы оверлей не зависел от файлов рядом с exe.
# Требует наличия assets/fonts/JetBrainsMono-Regular.ttf — см. README там же.
default = ["embedded-font"]
embedded-font = []
