[package]
name = "bs-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Glyph atlas and overlay layout"

[dependencies]
bs-core.workspace = true
ab_glyph.workspace = true

[dev-dependencies]
# Only for the `preview` example, which software-rasterises the draw list to a PNG so the
# layout can be checked by eye without bringing up D3D11.
png = "0.18"

[features]
# Embeds JetBrains Mono in the binary, so the overlay does not depend on files next to the
# executable. Requires assets/fonts/JetBrainsMono-Regular.ttf — see the README there.
default = ["embedded-font"]
embedded-font = []
