[package]
name = "bs-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Hardware telemetry: sampler traits and the Windows and Linux backends"

[dependencies]
bs-core.workspace = true
anyhow.workspace = true
tracing.workspace = true

[features]
default = []
# NVIDIA backend. nvml.dll is loaded dynamically regardless, so a build with this feature
# still runs on machines without NVIDIA hardware — the backend simply does not register.
nvidia = ["dep:nvml-wrapper"]

[dependencies.nvml-wrapper]
version = "0.12.1"
optional = true
