[package]
name = "bs-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Hardware telemetry: sampler traits and the Windows and Linux backends"

[dependencies]
bs-core.workspace = true
anyhow.workspace = true
tracing.workspace = true
# For the hardware-monitor bridge only. Its readings arrive as a JSON tree from another
# program, and hand-scanning that would be fragile in exactly the way a foreign format is.
serde_json = "1"

[features]
default = ["amd"]
# AMD backend. atiadlxx.dll is loaded dynamically, so a build with this feature still runs on
# machines with no Radeon in them — the backend simply does not register.
amd = []
# NVIDIA backend. nvml.dll is loaded dynamically regardless, so a build with this feature
# still runs on machines without NVIDIA hardware — the backend simply does not register.
nvidia = ["dep:nvml-wrapper"]

[dependencies.nvml-wrapper]
version = "0.12.1"
optional = true

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Wdk_System_SystemInformation",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Networking_WinHttp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Performance",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
]
