[package]
name = "bs-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "bladestats overlay on Windows: an always-on-top window, D3D11 and DirectComposition"

[[bin]]
name = "bladestats"
path = "src/main.rs"

[dependencies]
bs-core.workspace = true
bs-render.workspace = true
bs-telemetry.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# ETW consumer, used for frame timing. Kept behind the FrameSource abstraction in etw.rs so it
# can be swapped for raw windows-rs calls without touching anything else.
ferrisetw = "1.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
