[package]
name = "bs-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The bladestats overlay on Windows: the window over the game, its renderer and frame timing"

# A library only. bladestats ships as one executable, built in bs-config, which runs this
# overlay on its own thread.
[lib]
name = "bs_windows"
path = "src/lib.rs"

[dependencies]
bs-core.workspace = true
bs-render.workspace = true
bs-telemetry.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
toml.workspace = true
tracing.workspace = true

# ETW consumer, used for frame timing. Kept behind the FrameSource abstraction in etw.rs so it
# can be swapped for raw windows-rs calls without touching anything else.
ferrisetw = "1.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
